<resources>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="app_name">女神online</string>
    <string name="app_bar">首頁</string>
    <string name="stop">停止音樂</string>
    <string name="start">播放音樂</string>
    <string name="buymycard">線上購點</string>
    <string name="testpackage">福袋測試</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="newNS">光女神官網</string>
    <string name="baha">女神巴哈</string>
    <string name="viewpage">影片欣賞</string>
    <string name="wiki">女神裏wiki</string>
    <string name="butoon_yes">確定</string>
    <string name="butoon_no">取消</string>
    <string name="back">返回</string>
    <string name="getback">抽</string>
    <string name="clearback">清除</string>
</resources>
